Handling salePerson
